--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    
+    <h1>Quiz Game</h1>
+    <p id="question"></p>
+        <div>
+            <label for="option1" id="label1">Hi</label><br>
+            <label for="option2" id="label2">NasdasdasE</label><br>
+            <label for="option3" id="label3">ABC</label><br>
+            <button id="submit">Submit</button>
+        </div>
+    <p id="score"></p>
 </body>
 </html>
